fix mobile spacing

--- a/assets/index.css
+++ b/assets/index.css
@@ -94,7 +94,6 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  margin-bottom: -1em;
 }
 
 .education, .footer {
@@ -365,11 +364,7 @@ body {
   }
   
   /* For phones */
-  @media screen and (max-width: 889px) {
-    .upper {
-      margin-top: -2em;
-    }
-    
+  @media screen and (max-width: 1000px) {    
     .name {
       /* margin-top: 1.7em; */
       margin-bottom: -0.3em;
